--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -1,4 +1,3 @@
-# NGINX Deployment Configuration (nginx.yaml)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,8 +14,35 @@ spec:
       labels:
         app: nginx
     spec:
+      initContainers:
+      - name: init-nginx
+        image: busybox
+        command: ['sh', '-c', 'echo "$(cat /mnt/index.html | sed -e "s/{{ .NodeName }}/$(NODE_NAME)/" -e "s/{{ .PodIP }}/$(POD_IP)/")" > /usr/share/nginx/html/index.html']
+        env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
+        volumeMounts:
+        - name: index-html
+          mountPath: /mnt
+        - name: nginx-html
+          mountPath: /usr/share/nginx/html
       containers:
       - name: nginx
         image: nginx:latest
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: nginx-html
+          mountPath: /usr/share/nginx/html
+      volumes:
+      - name: index-html
+        configMap:
+          name: nginx-index
+      - name: nginx-html
+        emptyDir: {}
