--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -17,8 +17,13 @@ spec:
       initContainers:
       - name: init-nginx
         image: busybox
-        command: ['sh', '-c', 'echo "$(cat /mnt/index.html | sed -e "s/{{ .NodeName }}/$(NODE_NAME)/" -e "s/{{ .PodIP }}/$(POD_IP)/")" > /usr/share/nginx/html/index.html']
+        command: ['sh', '-c', 'echo "$(cat /mnt/index.html | sed -e "s/{{ .ClusterName }}/$(CLUSTER_NAME)/" -e "s/{{ .NodeName }}/$(NODE_NAME)/" -e "s/{{ .PodIP }}/$(POD_IP)/")" > /usr/share/nginx/html/index.html']
         env:
+        - name: CLUSTER_NAME
+          valueFrom:
+            configMapKeyRef:
+              name: cluster-info
+              key: cluster-name
         - name: NODE_NAME
           valueFrom:
             fieldRef:
