--- a/nginx-configmap.yaml
+++ b/nginx-configmap.yaml
@@ -7,17 +7,17 @@ data:
     <!DOCTYPE html>
     <html>
     <head>
-      <title>{{ .ClusterName }}</title>
+      <title>NGINX</title>
       <style>
         body {
           font-size: 18px;
         }
       </style>
     </head>
-    <body><center>
-      <h1>{{ .ClusterName }}</h1>
+    <body>
+      <h1>Welcome to NGINX!</h1>
+      <p>Cluster Name: {{ .ClusterName }}</p>
       <p>Worker Node: {{ .NodeName }}</p>
       <p>Pod IP: {{ .PodIP }}</p>
-      </center>
     </body>
     </html>
