--- a/helm/redis/templates/pvc.yaml
+++ b/helm/redis/templates/pvc.yaml
@@ -12,5 +12,5 @@ spec:
   resources:
     requests:
       storage: 20Gi
-  storageClassName: trident-csi
+  storageClassName: longhorn
   volumeMode: Filesystem
