--- a/helm/redis/templates/deployment.yaml
+++ b/helm/redis/templates/deployment.yaml
@@ -30,8 +30,8 @@ spec:
       volumes:
         {{- toYaml .Values.spec.template.spec.volumes | nindent 17 }}
       serviceAccountName: {{ include "redis.serviceAccountName" . }}
-      initContainers:
-        {{- toYaml .Values.spec.template.spec.initContainers | nindent 16 }}
+      # initContainers:
+      #   {{- toYaml .Values.spec.template.spec.initContainers | nindent 16 }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
