--- a/helm/redis/test-values.yaml
+++ b/helm/redis/test-values.yaml
@@ -1,8 +1,7 @@
 appName: redis
-namespace: redis
+namespace: test
 replicaCount: 3
-password: "RsmRedis!*?34"
-cluster: 
+password: "Redis1234"
 
 image:
   repository: redis
@@ -27,8 +26,6 @@ spec:
               secretKeyRef:
                 name: redis-secret
                 key: REDIS_PASSWORD
-          - name: TZ
-            value: Europe/Istanbul   
         command: [ "sh", "-c" ]
         args:
           - |
@@ -64,11 +61,11 @@ spec:
         args: ["/etc/redis/redis.conf"]
         resources:
           requests:
-            memory: "3Gi"
-            cpu: '1'
+            memory: "512Mi"
+            cpu: "300m"
           limits:
-            memory: "4Gi"
-            cpu: '2'
+            memory: "768Mi"
+            cpu: "300m"
         ports:
           - name: redis
             containerPort: 6379
@@ -101,7 +98,7 @@ spec:
           - ReadWriteOnce
         resources:
           requests:
-            storage: "20Gi"
+            storage: "2Gi"
         storageClassName: longhorn   
 
 # nindent 10
@@ -133,6 +130,29 @@ ingress:
           pathType: ImplementationSpecific
   tls: []
   
+
+
+# nindent 20
+traefik:
+  redis:
+    ingress:
+      routes:
+        - match: HostSNI(`*`)
+          services:
+            - name: redis-haproxy
+              port: 6379
+              terminationDelay: 60000        
+              nativeLB: true
+
+  haproxy:
+    ingress:
+      routes:
+        - kind: Rule
+          match: Host(`redis-haproxy-test.rsm-dev-cloud.vodafone.local`)
+          services:
+            - name: redis-haproxy
+              port: 8080     
+
 # nindent 21
 haproxy:
   appName: haproxy
@@ -171,11 +191,11 @@ haproxy:
         containers:      
           resources:
             requests:
-              memory: "1Gi"
-              cpu: "500m"
+              memory: "512Mi"
+              cpu: "300m"
             limits:
-              memory: "2Gi"
-              cpu: "900m"
+              memory: "768Mi"
+              cpu: "300m"
           ports:
             - containerPort: 8080
             - containerPort: 6379
@@ -194,7 +214,6 @@ haproxy:
   podAnnotations: {}
   podSecurityContext: {}
   initContainers: {}
-
 
 # nindent 22
 sentinel:
@@ -258,11 +277,11 @@ sentinel:
           args: ["/etc/redis/sentinel.conf"]
           resources:
             requests:
-              memory: "1Gi"
-              cpu: "500m"
+              memory: "386Mi"
+              cpu: "300m"
             limits:
-              memory: "2Gi"
-              cpu: "800m"
+              memory: "512Mi"
+              cpu: "300m"
           ports:
           - containerPort: 5000
             name: sentinel
