--- a/helm/rabbitmq/izmir-values.yaml
+++ b/helm/rabbitmq/izmir-values.yaml
@@ -4,7 +4,7 @@ traefik:
   ingress:
     routes:
       - kind: Rule
-        match: Host(`rabbitmq-ui-izmir.guven.uk`)
+        match: Host(`izmir.guven.uk`) && PathPrefix(`/rabbitui`)
         services:
           - name: rabbitmq
             port: 15672
