--- a/helm/redis/istanbul-values.yaml
+++ b/helm/redis/istanbul-values.yaml
@@ -14,7 +14,7 @@ traefik:
     ingress:
       routes:
         - kind: Rule
-          match: Host(`redis-haproxy-istanbul.guven.uk`)
+          match: Host(`redis-ui-istanbul.guven.uk`)
           services:
             - name: redis-haproxy
               port: 8080     
