--- a/helm/traefik/Chart.yaml
+++ b/helm/traefik/Chart.yaml
@@ -1,25 +1,36 @@
+annotations:
+  artifacthub.io/changes: "- \"fix: \U0001F41B improve confusing suggested value on
+    openTelemetry.grpc\"\n- \"fix: \U0001F41B declare http3 udp port, with or without
+    hostport\"\n- \"feat: \U0001F4A5 deployment.podannotations support interpolation
+    with tpl\"\n- \"feat: allow update of namespace policy for websecure listener\"\n-
+    \"feat: allow defining startupProbe\"\n- \"feat: add file provider\"\n- \"feat:
+    :boom: unify plugin import between traefik and this chart\"\n- \"chore(release):
+    \U0001F680 publish v26\"\n- \"chore(deps): update traefik docker tag to v2.10.6\"\n-
+    \"Release namespace for Prometheus Operator resources\"\n"
 apiVersion: v2
+appVersion: v2.10.6
+description: A Traefik based Kubernetes ingress controller
+home: https://traefik.io/
+icon: https://raw.githubusercontent.com/traefik/traefik/v2.3/docs/content/assets/img/traefik.logo.png
+keywords:
+- traefik
+- ingress
+- networking
+kubeVersion: '>=1.16.0-0'
+maintainers:
+- email: emile@vauge.com
+  name: emilevauge
+- email: daniel.tomcej@gmail.com
+  name: dtomcej
+- email: ldez@traefik.io
+  name: ldez
+- email: michel.loiseleur@traefik.io
+  name: mloiseleur
+- email: charlie.haley@traefik.io
+  name: charlie-haley
 name: traefik
-description: A Helm chart for Kubernetes
-kubeVersion: < 1.31.0-0
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+sources:
+- https://github.com/traefik/traefik
+- https://github.com/traefik/traefik-helm-chart
 type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
-appVersion: "1.16.0"
+version: 26.0.0
