--- a/helm/traefik/istanbul-values.yaml
+++ b/helm/traefik/istanbul-values.yaml
@@ -1,20 +1,5 @@
-# nindent 20
 traefik:
-  redis:
-    ingress:
-      routes:
-        - match: HostSNI(`*`)
-          services:
-            - name: redis-haproxy
-              port: 6379
-              terminationDelay: 60000        
-              nativeLB: true
-
-  haproxy:
-    ingress:
-      routes:
-        - kind: Rule
-          match: Host(`redis-ui-istanbul.guven.uk`)
-          services:
-            - name: redis-haproxy
-              port: 8080     
+  dashboard:
+    route:
+      match: "Host(`traefik-ist.guven.local`,`istanbul.guven.uk`)"
+      
