--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -5,7 +5,7 @@ image:
   # -- Traefik image repository
   repository: traefik
   # -- defaults to appVersion
-  tag: "26.0.0"
+  tag: ""
   # -- Traefik image pull policy
   pullPolicy: IfNotPresent
 
