--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -790,7 +790,7 @@ service:
   labels: {}
   # -- Additional entries here will be added to the service spec.
   # -- Cannot contain type, selector or ports entries.
-  spec: {}
+  spec: 
   # externalTrafficPolicy: Cluster
     loadBalancerIP: "10.10.10.32"
   # clusterIP: "2.3.4.5"
