--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -230,11 +230,11 @@ providers:
     allowExternalNameServices: false
     # -- Allows to return 503 when there is no endpoints available
     allowEmptyServices: false
-    # ingressClass: traefik-internal
+    ingressClass: traefik-external
     # labelSelector: environment=production,method=traefik
     # -- Array of namespaces to watch. If left empty, Traefik watches all namespaces.
     namespaces: []
-    # - "default"
+      # - "default"
 
   kubernetesIngress:
     # -- Load Kubernetes Ingress provider
