--- a/helm/traefik/istanbul-values.yaml
+++ b/helm/traefik/istanbul-values.yaml
@@ -4,5 +4,6 @@ traefik:
       match: "Host(`traefik-ist.guven.local`,`istanbul.guven.uk`)"
       
 
-spec: 
-  loadBalancerIP: "10.10.10.31"      
+service:
+  spec: 
+    loadBalancerIP: "10.10.10.31"      
