--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -630,6 +630,12 @@ ports:
     # -- The port protocol (TCP/UDP)
     protocol: TCP
 
+
+  loki:
+    port: 3100
+    protocol: TCP
+    expose: true
+
   rabbitmq:
     port: 5672
     protocol: TCP
