--- a/helm/loki-stack/charts/grafana/values.yaml
+++ b/helm/loki-stack/charts/grafana/values.yaml
@@ -1141,3 +1141,19 @@ extraObjects: []
   #     data:
   #       - key: grafana-admin-password
   #         name: adminPassword
+
+
+
+
+traefik:
+  ingress:
+    routes:
+      - kind: Rule
+        match: Host(`izmir.guven.uk`) && PathPrefix(`/grafana`)
+        services:
+          - name: loki-stack-izmir-grafana
+            namespace: loki-stack
+            port: 80
+        middlewares:
+          - name: strip-grafana
+            namespace: loki-stack
