--- a/helm/loki-stack/charts/grafana/values.yaml
+++ b/helm/loki-stack/charts/grafana/values.yaml
@@ -1145,15 +1145,16 @@ extraObjects: []
 
 
 
-grafana:
-  ingress:
-    routes:
-      - kind: Rule
-        match: Host(`istanbul.guven.uk`) && PathPrefix(`/grafana`)
-        services:
-          - name: loki-stack-istanbul-grafana
-            namespace: loki-stack
-            port: 80
-        middlewares:
-          - name: strip-grafana
-            namespace: loki-stack
+loki:
+  grafana:
+    ingress:
+      routes:
+        - kind: Rule
+          match: Host(`izmir.guven.uk`) && PathPrefix(`/grafana`)
+          services:
+            - name: loki-stack-izmir-grafana
+              namespace: loki-stack
+              port: 80
+          middlewares:
+            - name: strip-grafana
+              namespace: loki-stack
