--- a/helm/loki-stack/charts/grafana/values.yaml
+++ b/helm/loki-stack/charts/grafana/values.yaml
@@ -1144,17 +1144,15 @@ extraObjects: []
 
 
 
-
-loki:
-  grafana:
-    ingress:
-      routes:
-        - kind: Rule
-          match: Host(`istanbul.guven.uk`) && PathPrefix(`/grafana`)
-          services:
-            - name: loki-stack-istanbul-grafana
-              namespace: loki-stack
-              port: 80
-          middlewares:
-            - name: strip-grafana
-              namespace: loki-stack
+# grafana:
+#   ingress:
+#     routes:
+#       - kind: Rule
+#         match: Host(`istanbul.guven.uk`) && PathPrefix(`/grafana`)
+#         services:
+#           - name: loki-stack-istanbul-grafana
+#             namespace: loki-stack
+#             port: 80
+#         middlewares:
+#           - name: strip-grafana
+#             namespace: loki-stack
