--- a/helm/loki-stack/charts/grafana/templates/ingressRoute.yaml
+++ b/helm/loki-stack/charts/grafana/templates/ingressRoute.yaml
@@ -19,4 +19,4 @@ spec:
   entryPoints:
     - websecure
   routes:  
-    {{- toYaml .Values.loki.grafana.ingress.routes | nindent 4 }} 
+    {{- toYaml .Values.grafana.ingress.routes | nindent 4 }} 
