--- a/helm/loki-stack/charts/grafana/values.yaml
+++ b/helm/loki-stack/charts/grafana/values.yaml
@@ -1163,3 +1163,6 @@ instances:
   istanbul:
     host: "istanbul.guven.uk"
     serviceName: "loki-stack-istanbul-grafana"
+  ankara:
+    host: "ankara.guven.uk"
+    serviceName: "loki-stack-ankara-grafana"
