--- a/helm/postgresql/values.yaml
+++ b/helm/postgresql/values.yaml
@@ -1778,3 +1778,11 @@ metrics:
     ##       summary: PostgreSQL replication is lagging by {{ "{{ $value }}" }} hour(s).
     ##
     rules: []
+  
+traefik:  
+  ingressTCP:
+    routes:
+      - match: HostSNI(`*`)
+        services:
+          - name: postgres
+            port: 5672
