--- a/helm/postgresql/templates/ingressTCP.yaml
+++ b/helm/postgresql/templates/ingressTCP.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRouteTCP
 metadata:
-  name: {{ .Values.appName }}
+  name: postgres
   annotations: 
     kubernetes.io/ingress.class: traefik-external 
 spec:
