--- a/helm/postgresql/templates/ingressTCP.yaml
+++ b/helm/postgresql/templates/ingressTCP.yaml
@@ -6,7 +6,7 @@ metadata:
     kubernetes.io/ingress.class: traefik-external 
 spec:
   entryPoints:
-    - postgresql
+    - postgres
   routes:  
     {{- toYaml .Values.traefik.ingressTCP.routes | nindent 10 }}
     
