traefik ve postgres

--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -651,7 +651,7 @@ ports:
     protocol: TCP
     expose: true
 
-  postgresql:
+  postgres:
     port: 5432
     protocol: TCP
     expose: true    
