traefik ve postgres

--- a/helm/postgresql/templates/ingressTCP.yaml
+++ b/helm/postgresql/templates/ingressTCP.yaml
@@ -8,5 +8,7 @@ spec:
   entryPoints:
     - postgres
   routes:  
-    {{- toYaml .Values.traefik.ingressTCP.routes | nindent 10 }}
-    
+    - match: HostSNI(`*`)
+      services:
+        - name: postgres
+          port: 5672
