redis icin haproxy ayarlari

--- a/helm/redis/izmir-values.yaml
+++ b/helm/redis/izmir-values.yaml
@@ -10,6 +10,17 @@ traefik:
               terminationDelay: 60000        
               nativeLB: true
 
+traefik:
+  redis:
+    ingress:
+      routes:
+        - match: HostSNI(`*`)
+          services:
+            - name: redis
+              port: 16379
+              terminationDelay: 60000        
+              nativeLB: true              
+
   haproxy:
     ingress:
       routes:
