--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -661,6 +661,12 @@ ports:
     protocol: TCP
     expose: true    
 
+  hazelcast:
+    port: 5701
+    protocol: TCP
+    expose: true  
+
+
   web:
     ## -- Enable this entrypoint as a default entrypoint. When a service doesn't explicitly set an entrypoint it will only use this entrypoint.
     # asDefault: true
