--- a/helm/hazelcast/templates/ingressTCP.yaml
+++ b/helm/hazelcast/templates/ingressTCP.yaml
@@ -10,5 +10,5 @@ spec:
   routes:  
     - match: HostSNI(`*`)
       services:
-        - name: hazelcast
+        - name: hz-hazelcast
           port: 5701
