--- a/helm/hazelcast/izmir-values.yaml
+++ b/helm/hazelcast/izmir-values.yaml
@@ -6,12 +6,12 @@ traefik:
       - kind: Rule
         match: Host(`izmir.guven.uk`) && PathPrefix(`/hazelcast`)
         services:
-          - name: hz-hazelcast-mancenter
+          - name: hazelcast-izmir-mancenter
             port: 9443
             
   ingressTCP:
     routes:
       - match: HostSNI(`*`)
         services:
-          - name: hz-hazelcast
+          - name: hazelcast-izmir
             port: 5701
