--- a/helm/hazelcast/templates/ingressTCP.yaml
+++ b/helm/hazelcast/templates/ingressTCP.yaml
@@ -1,14 +1,14 @@
-# apiVersion: traefik.containo.us/v1alpha1
-# kind: IngressRouteTCP
-# metadata:
-#   name: hazelcast
-#   annotations: 
-#     kubernetes.io/ingress.class: traefik-external 
-# spec:
-#   entryPoints:
-#     - hazelcast
-#   routes:  
-#     - match: HostSNI(`*`)
-#       services:
-#         - name: hazelcast-izmir
-#           port: 5701
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRouteTCP
+metadata:
+  name: hazelcast
+  annotations: 
+    kubernetes.io/ingress.class: traefik-external 
+spec:
+  entryPoints:
+    - hazelcast
+  routes:  
+    - match: HostSNI(`*`)
+      services:
+        - name: hazelcast-izmir
+          port: 5701
