--- a/helm/traefik/templates/dashboard-ingress.yaml
+++ b/helm/traefik/templates/dashboard-ingress.yaml
@@ -29,9 +29,9 @@ spec:
   routes:
     - match: {{ .Values.traefik.dashboard.route.match }} 
       kind: Rule
-      middlewares:
-        - name: traefik-dashboard-basicauth
-          namespace: traefik
+      # middlewares:
+      #   - name: traefik-dashboard-basicauth
+      #     namespace: traefik
       services:
         - name: api@internal
           kind: TraefikService    
