--- a/helm/hazelcast/istanbul-values.yaml
+++ b/helm/hazelcast/istanbul-values.yaml
@@ -8,9 +8,9 @@ traefik:
         services:
           - name: hazelcast-istanbul-mancenter
             port: 8080
-        middlewares:
-          - name: strip-hazelcast
-            namespace: hazelcast                      
+        # middlewares:
+        #   - name: strip-hazelcast
+        #     namespace: hazelcast                      
             
   ingressTCP:
     routes:
